--- a/libs/prisma/package.json
+++ b/libs/prisma/package.json
@@ -27,10 +27,14 @@
     "@types/node": "^16.11.5",
     "prisma": "^3.3.0",
     "rimraf": "^3.0.2",
+    "ts-node": "^10.4.0",
     "typescript": "^4.4.4"
   },
   "dependencies": {
     "@acme/core": "workspace:*",
     "@prisma/client": "^3.3.0"
+  },
+  "prisma": {
+    "seed": "ts-node prisma/seed.ts"
   }
 }
