--- a/package.json
+++ b/package.json
@@ -7,14 +7,15 @@
     "libs/*"
   ],
   "scripts": {
-    "postinstall": "yarn workspaces foreach run build",
     "start": "yarn workspaces foreach run start",
+    "build": "yarn workspaces foreach run build",
     "watch": "yarn workspaces foreach run build:watch",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix"
+    "test": "yarn workspaces foreach run test",
+    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\"",
+    "lint:fix": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.1.4",
-    "@nestjs/schematics": "^8.0.4",
     "@types/node": "^16.11.5",
     "@typescript-eslint/eslint-plugin": "^5.2.0",
     "@typescript-eslint/parser": "^5.2.0",
