--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,20 +1,3 @@
 {
-  "extends": "./tsconfig.base.json",
-  "compilerOptions": {
-    "baseUrl": "./",
-    "paths": {
-      "acme/whatthe": [
-        "libs/whatthe/src"
-      ],
-      "acme/whatthe/*": [
-        "libs/whatthe/src/*"
-      ],
-      "@acme/somelibrary": [
-        "libs/somelibrary/src"
-      ],
-      "@acme/somelibrary/*": [
-        "libs/somelibrary/src/*"
-      ]
-    }
-  }
+  "extends": "./tsconfig.base.json"
 }
